@startuml

class user{
    int id
    string username
    string password
    date registryDate
    String email
    String mobile

}
class manager{
    int id
    string username
    string password
}
class category{
    int id
    String name
    String introduce

}

class product{
    int id
    int categoryId
    String name
    double deposit #租金
    double dailyPrice
    double discountDailyPrice
    int currentInventory
    int totalInventory
    String introduce
    String parameter #json格式字符串,产品参数
    String picUrl
}
class order{
    int id
    int userId

    date orderTime
    double orderTotalPrice

    byte states  # 0表示为购物车，1表示已经支付
}

class orderItem{
    int id
    int productId
    int orderId
    int quantity
    date beginTime
    date endTime

    double totalPrice



}




category<|-product
orderItem<|-order
orderItem --|>product
order --|>user


@enduml